# examples

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
program_features/: .gitignore  .gitmodules  CMakeLists.txt  README.md
program_features/cmake/: Findlicensecc.cmake
program_features/src/: example.cpp
simple_pc_identifier/: .gitignore  CMakeLists.txt  README.md
simple_pc_identifier/cmake/: Findlicensecc.cmake
simple_pc_identifier/src/: example.cpp
submodule/: CMakeLists.txt  README.md
submodule/cmake/: Findlicensecc.cmake
submodule/src/: example.cpp
